add js to project

--- a/cervecerias/kirara.html
+++ b/cervecerias/kirara.html
@@ -37,6 +37,7 @@
                 <p class="paragraph">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Eius numquam nulla nobis facere itaque, saepe mollitia pariatur cum at, eveniet inventore perferendis totam id repellat quisquam aut exercitationem dicta quia.</p>
             </section>
 		</div>
-	</div>
+    </div>
+	<script src="./javascript/main.js"></script>
 </body>
 </html> 
