--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 					<th>#</th>
 					<th>Nombre</th>
 					<th>Ubicaci&oacute;n</th>
-					<th>Calificacion</th>
+					<th>Calificaci&oacute;n</th>
 					<th>Acciones</th>
 				</thead>
 				<tbody>
@@ -31,7 +31,7 @@
 						<td>Calle 14 y 57</td>
 						<td><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i></td>
 						<td>
-							<a rel="stylesheet" href="./Cervecerias/Kirara.html">Ver más</a>
+							<a rel="stylesheet" href="./cervecerias/kirara.html">Ver más</a>
 						</td>
 					</tr>
 					<tr>
@@ -66,5 +66,6 @@
 			</table>
 		</div>
 	</div>
+	<script src="./javascript/main.js"></script>
 </body>
 </html> 
