Add events to project

--- a/index.html
+++ b/index.html
@@ -39,7 +39,9 @@
 						<td>Marga</td>
 						<td>Calle 12 y 64</td>
 						<td><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"><i class="fas fa-star"></i></i><i class="far fa-star"></i></td>
-						<td></td>
+						<td>
+							<a rel="stylesheet" href="./cervecerias/kirara.html">Ver más</a>
+						</td>
 					</tr>
 					<tr>
 						<td>3</td>
