--- a/cervecerias/kirara.html
+++ b/cervecerias/kirara.html
@@ -38,6 +38,6 @@
             </section>
 		</div>
     </div>
-	<script src="./javascript/main.js"></script>
+	<script src="../../javascript/main.js"></script>
 </body>
 </html> 
